Fixed Edit button overlapping in Timeline wizard summary

--- a/app/assets/stylesheets/modules/_wizard.styl
+++ b/app/assets/stylesheets/modules/_wizard.styl
@@ -160,6 +160,8 @@ wizard-width = 860px
         margin-bottom 0
         padding 20px
         width 100%
+        > p:not(:last-child)
+          width 90%
         &:first-child
           border-top-width 1px
       .edit
